--- a/notebooks/exercise_1.ipynb
+++ b/notebooks/exercise_1.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuK7LWNaGN0ik25Q4o0PHv",
+      "authorship_tag": "ABX9TyMkWMqGtkRQtNs3A15dckts",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "KbXiowksSNs3"
       },
       "source": [
-        "# Exercise 1: descriptive statistics and visualisation\n"
+        "# Exercise 1: Descriptive statistics and visualisation\n"
       ]
     },
     {
@@ -44,6 +44,17 @@
       "source": [
         "Let's put into practice the functions we have seen of central tendency, dispersion and visualisation."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1ftLyIrPsrk9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
