--- a/notebooks/exercise_1.ipynb
+++ b/notebooks/exercise_1.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkWMqGtkRQtNs3A15dckts",
+      "authorship_tag": "ABX9TyM5SzgAOlzQb8rmxVPxa4hr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "import pandas as pd  # Pandas allows manipulating large tables\n",
         "import seaborn as sns\n",
         "\n",
-        "sns.set_style('whitegrid')  # # Adds a rather cute background grid in Seaborn\n",
+        "sns.set_style('whitegrid')  # Adds a rather cute background grid in Seaborn\n",
         "\n",
         "# Round the output to two decimal points\n",
         "%precision %.2f"
