--- a/notebooks/supervised_learning.ipynb
+++ b/notebooks/supervised_learning.ipynb
@@ -6,7 +6,8 @@
       "name": "supervised_learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqOY+RQLpx/fHeEsALJD8w",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN5r/uHF3PaOsNbiMnqJKUa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,6 +273,51 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Exercise"
+      ],
+      "metadata": {
+        "id": "9Wwb3E5PGSlb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Use de *Divorce predictors dataset* to create a classifier that predicts divorce based on a survey of 54 questions using a 5-point scale: `0`=Never, `1`=Seldom, `2`=Averagely, `3`=Frequently, `4`=Always.\n",
+        "\n",
+        "Features and coded in columns `Atr1` to `Atr54`. The class is codified in the last column (`Class`), where `1` means divorced and `0` means married.\n",
+        "\n",
+        "Try different classifiers and find the best one!"
+      ],
+      "metadata": {
+        "id": "uDWSCppRGbpd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download the dataset to train and test the regression system\n",
+        "!wget https://raw.githubusercontent.com/d-tomas/transform4europe/main/datasets/divorce_predictors.csv"
+      ],
+      "metadata": {
+        "id": "fmtA8hmFVyYP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code goes here!\n"
+      ],
+      "metadata": {
+        "id": "LI5-hf8dVzGI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "VaJo_0DlZSIO"
       },
@@ -279,7 +325,8 @@
         "# Referencias\n",
         "\n",
         "* [Banknote authentication dataset](https://archive.ics.uci.edu/ml/datasets/banknote+authentication)\n",
-        "* [House prices dataset](https://www.kaggle.com/c/house-prices-advanced-regression-techniques)\n"
+        "* [House prices dataset](https://www.kaggle.com/c/house-prices-advanced-regression-techniques)\n",
+        "* [Divorce predictors dataset](https://archive.ics.uci.edu/ml/datasets/Divorce+Predictors+data+set)"
       ]
     }
   ]
