--- a/notebooks/document_representation.ipynb
+++ b/notebooks/document_representation.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "document_representation.ipynb",
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvcf8JmZJATEd+IgniRUrn",
+      "authorship_tag": "ABX9TyMbxr0iN96eX8vLAFN0M4wG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,13 +258,13 @@
         "\n",
         "vectorizer = CountVectorizer()\n",
         "X = vectorizer.fit_transform(corpus)\n",
-        "print(vectorizer.get_feature_names())\n",
+        "print(vectorizer.get_feature_names_out())\n",
         "print(X.toarray())\n",
         "print(X.shape)\n",
         "\n",
         "vectorizer2 = CountVectorizer(analyzer = 'word', ngram_range = (2, 2))  # Extract bigrams\n",
         "X2 = vectorizer2.fit_transform(corpus)\n",
-        "print(vectorizer2.get_feature_names())\n",
+        "print(vectorizer2.get_feature_names_out())\n",
         "print(X2.toarray())\n",
         "print(X2.shape)"
       ],
@@ -282,7 +281,7 @@
         "\n",
         "vectorizer = TfidfVectorizer()\n",
         "X = vectorizer.fit_transform(corpus)\n",
-        "print(vectorizer.get_feature_names())\n",
+        "print(vectorizer.get_feature_names_out())\n",
         "print(X.toarray())"
       ],
       "execution_count": null,
