--- a/notebooks/document_representation.ipynb
+++ b/notebooks/document_representation.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMbxr0iN96eX8vLAFN0M4wG",
+      "authorship_tag": "ABX9TyOzaiEHusGFNHErhSTg6U4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +391,7 @@
       "source": [
         "# Ditch unrelated terms\n",
         "\n",
-        "model.doesnt_match(['wine', 'beer', 'coke', 'whysky'])"
+        "model.doesnt_match(['wine', 'beer', 'coke', 'whisky'])"
       ],
       "execution_count": null,
       "outputs": []
